@@ -3639,6 +3639,8 @@ STR_6533    :{WINDOW_COLOUR_2}Excitement Factor: {BLACK}-{COMMA16}%
 STR_6534    :{WINDOW_COLOUR_2}Intensity Factor: {BLACK}-{COMMA16}%
 STR_6535    :{WINDOW_COLOUR_2}Nausea Factor: {BLACK}-{COMMA16}%
 STR_6536    :This park was saved in a later version of OpenRCT2. The park was saved in v{INT32}, you are currently on v{INT32}.
+STR_6537    :Allow using regular paths as queue
+STR_6538    :Shows regular paths in the queues dropdown of the Footpaths window.
 
 #############
 # Scenarios #
