@@ -1,5 +1,6 @@
 0.4.4 (in development)
 ------------------------------------------------------------------------
+- Feature: [#18744] Cheat to allow using a regular path as a queue path.
 - Improved: [#18826] [Plugin] Added all actions and their documentation to plugin API.
 
 0.4.3 (2022-12-14)
